--- a/index.html
+++ b/index.html
@@ -741,9 +741,10 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
         curr_region = data_GHG.filter(x => x.city === d).map(x => x.region)[0].toString();        
 
         if (curr_region === "groupUSA") {xscale=1; yscale=1;}
+        if (curr_region === "groupEurope") {xscale=1.3; yscale=1;}
         else if (curr_region === "groupCan") {xscale=5; yscale=1; }
         else if (curr_region === "groupAfrica") {xscale=5; yscale=1.5; }
-        else if (curr_region === "groupOceania") {xscale=4; yscale=2; }
+        else if (curr_region === "groupOceania") {xscale=3.5; yscale=1; }
         else if (curr_region === "groupLatinAmer") {xscale=2; yscale=1.4;}
         else if (curr_region === "groupAsia") {xscale=2.4; yscale=1.4;}
         
