--- a/index.html
+++ b/index.html
@@ -592,10 +592,13 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
   // if (geogroup_name === "groupUSA") my_width ="75%";
   // else if (geogroup_name === "groupCan") my_width ="25%";
   // else my_width = "100%";
-  my_width = "100%";
+  if (geogroup_name === "groupLatinAmer") my_width = "80%";
+  else if (geogroup_name === "groupOceania") my_width = "70%";
+  else if (geogroup_name === "groupAfrica") my_width = "70%";
+  else my_width = "100%";
   var svgBarChart = d3.select(geogroup_id).append("svg").attr("class", "barSVG")
     .attr('width', my_width)
-    .attr('height', height)
+    .attr('height', 150) // height)
     .attr('viewBox', viewBox)
     .attr('viewBox', '0 0 ' +  ( width + margin.left + margin.right ) + ' ' + ( height  + margin.top + margin.bottom ) )
     .attr('preserveAspectRatio', 'none')
@@ -618,7 +621,7 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
     if (this_dim === label_dataPerCap) {
       if (geogroup_name === "groupEurope" || geogroup_name === "groupAsia" ||
         geogroup_name === "groupUSA" || geogroup_name === "groupCan") same_max = 30;
-      else  same_max = 5.5;
+      else  same_max = 6;
     } else {
       if (geogroup_name === "groupAfrica") same_max = 750000;
       else same_max = 370000;
@@ -744,7 +747,7 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
         if (curr_region === "groupEurope") {xscale=1.3; yscale=1;}
         else if (curr_region === "groupCan") {xscale=5; yscale=1; }
         else if (curr_region === "groupAfrica") {xscale=5; yscale=1.5; }
-        else if (curr_region === "groupOceania") {xscale=3.5; yscale=1; }
+        else if (curr_region === "groupOceania") {xscale=5; yscale=1; }
         else if (curr_region === "groupLatinAmer") {xscale=2; yscale=1.4;}
         else if (curr_region === "groupAsia") {xscale=2.4; yscale=1.4;}
         
