Added dropdown menu item texts

--- a/index.html
+++ b/index.html
@@ -97,9 +97,17 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
               <i class="fa fa-caret-down"> Protocol</i>
             </button>
              <div class="dropdown-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+              <a href="#">population density [/km2]</a>
+              <a href="#">diesel price</a>
+              <a href="#">gas price</a>
+              <a href="#">HDD 15.5C</a>
+              <a href="#">CDD 23C</a>
+              <a href="#">change in emissions</a>
+              <a href="#">low BUA % (2014)</a>
+              <a href="#">high BUA % (2014)</a>
+              <a href="#">Congestion rank (INRIX)</a>
+              <a href="#">Congestion rank (TomTom)</a>
+              <a href="#">CIMI ranking (IESE)</a>
             </div>
           </div>
           <div id="barChartLegend"class="col-lg-10">
