console.logs removed

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ fn_appendRegionalLine();
 
 // d3.csv("data/Creutzig2014_dataset_wb.csv", function(ghg) {
 d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
-  console.log("ghg read: ", ghg)
+  //console.log("ghg read: ", ghg)
 
   setupData(ghg);
   drawMap();
