--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
     || geogroup_name === "groupLatinAmer") {
     margin = {top: 0, right: 0, bottom: 0, left: 100};
   } else if (geogroup_name === "groupEurasia") {
-    margin = {top: 0, right: 0, bottom: 0, left: 0};
+    margin = {top: 0, right: 0, bottom: 0, left: 2};
   }
   var width = 700 - margin.left - margin.right,
       height = 250 - margin.top - margin.bottom;
@@ -832,17 +832,8 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
       .call(d3.axisRight(y).ticks(5))
       .selectAll("text")  
         .style("text-anchor", "end")
-        .attr("dx", "-1.1em")
-        .attr("dy", ".15em")
-      .attr("transform", function (d) {
-        xscale=1; yscale=1;
-        
-        if (geogroup_name === "groupCan") {xscale=5; yscale=1;}
-        else if (geogroup_name === "groupOceania") {xscale=1.5; yscale=1;}
-        else if (geogroup_name === "groupEurasia") {xscale=1.3; yscale=1;}
-        
-        return "scale(" + xscale + " " + yscale + ")";
-        });
+        .attr("dx", "-.8em")
+        .attr("dy", ".15em");
 
   //-----------------------------------------------------------------------------------------
   //Visual fixes
