WIP barchart legend: done. Displays units

--- a/index.html
+++ b/index.html
@@ -87,10 +87,12 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
           </div>
       </div>
 
-      <div class="col-lg-9">
+      <div class="col-lg-4">
         <div id="barChartLegend">
            <svg></svg>
         </div>
+      </div>
+      <div class="col-lg-3" id="barChartLegendUnits">
       </div>
 
     </div> <!-- ./row 3 -->
