--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
       <div class="col-lg-3">
           <div id="barChartLegendLabel">Colour bars by: 
             <select id="d3-dropdown">
-              <option value="methodology">Protocol</option>
+              <option value="methodology" selected="selected">Protocol</option>
               <option value="population density">population density</option>
               <!--<option value="gas price">gas price</option>
               <option value="diesel price">diesel price</option>
@@ -83,7 +83,8 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
               <option value="Congestion rank (INRIX)">Congestion rank (INRIX)</option>
               <option value="Congestion rank (TomTom)">Congestion rank (TomTom)</option>
               <option value="CIMI ranking (IESE)">CIMI ranking (IESE)</option> -->
-            </select>          
+            </select>
+            <p id="selected-dropdown"></p>
           </div>
       </div>
 
