--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <!-- custom -->
   <link href="style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <script src="aux_fns.js"></script>
   <script src="globalvars.js"></script>
 
