WIP barChart region headings posn

--- a/index.html
+++ b/index.html
@@ -119,7 +119,16 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
         <!--barChart sub-rows-->
         <div class="row">
           
-            <div class="barChartTitle">USA &#183; Asia</div>
+            <div class="col-lg-2 .barChartTitle" 
+                 style='position: relative; left: 12px; text-align: left; border:none; 
+                 font-weight:bold; color: #565656;'>
+                 USA
+            </div>
+            <div class="col-lg-2 .barChartTitle" 
+                 style='position: relative; left: 682px; top: 0px;text-align: left; border:none;
+                 font-weight:bold; color: #565656;'>
+                 Asia
+            </div>
             <div id="barChart_USAAsia"></div>
          
         </div>
